# document-summarisation

./: .gitignore  README.md  example.py  extracted_text.md  main.py  mistralai_101.py  pdf_to_markdown.py  process_pdf.py  pyproject.toml  requirements.txt  test_pdf_to_markdown.py
RESTAPI/: EHDS-EU-2025.327-EN.xml  README.md  mistral_ocr_example.py  mistral_ocr_old.py  mistral_ocr_pdf2md.py  pypdf_sanbox.py  simple_example.py
